- PR#6787: Soundness bug with polymorphic variants
- PR#6790: otherlibs should be built with -g
- PR#6791: "%s@[", "%s@{" regression in Scanf
  (Benoît Vaugon)
- PR#6793: ocamlbuild passes nonsensical "-ocamlc ..." commands to menhir
  (Gabriel Scherer, report by Damien Doligez)
- PR#6799: include guards missing for unixsupport.h and other files
- PR#6812: -short-paths and -no-alias-deps can create inconsistent assumptions
- PR#6817: GADT exhaustiveness breakage with modules
- PR#6824: fix buffer sharing on partial application of Format.asprintf
  (Gabriel Scherer, report by Alain Frisch)
- PR#6831: Build breaks for -aspp gcc on solaris-like OSs
- PR#6836: Assertion failure using -short-paths
- PR#6837: Build profiling libraries on FreeBSD and NetBSD x86-64
- PR#6841: Changing compilation unit name with -o breaks ocamldebug
- PR#6842: export Typemod.modtype_of_package
- PR#6843: record weak dependencies even when the .cmi is missing
  (Leo White, Gabriel Scherer)
- PR#6849: Inverted pattern unification error
- PR#6857: __MODULE__ doesn't give the current module with -o
- GPR#143: fix getsockopt behaviour for boolean socket options
  (Anil Madhavapeddy and Andrew Ray)
- ocamlbuild on cygwin cannot find ocamlfind
  (user 'algoriddle')
- allow android build with pthreads support (since SDK r10c)
  (Peter Zotov)
- GPR#171: allow custom warning printers / catchers
  (Benjamin Canou, review by Damien Doligez)


OCaml 4.02.1:
-------------
(Changes that can break existing programs are marked with a "*")

Standard library:
* Add optional argument ?limit to Arg.align.

- PR#4099: Bug in Makefile.nt: won't stop on error
  (George Necula)
- PR#6181: Improve MSVC build
  (Chen Gang)
- PR#6207: Configure doesn't detect features correctly on Haiku
  (Jessica Hamilton)
- PR#6466: Non-exhaustive matching warning message for open types is confusing
  (Peter Zotov)
- PR#6529: fix quadratic-time algorithm in Consistbl.extract.